Update Start It M1 læring.HTML

--- a/Start It M1 læring.HTML
+++ b/Start It M1 læring.HTML
@@ -3,23 +3,60 @@
 <head>
     <title></title>
     <style>
-    p {float: ;}
+
+    .div1 {box-sizing: border-box;
+         margin: 1px;
+         border: black 2px;
+         float: left;
+         width: 30.33%;
+         padding: 50px;
+         clear: none;
+        }
+
+    .div2 {box-sizing: border-box;
+         margin: 1px;
+         border: black 2px;
+         float: left;
+         width: 30.33%;
+         padding: 50px;
+         clear: none;
+         }
+
+    .div3 {box-sizing: border-box;
+         margin: 1px;
+         border: black 2px;
+         float: left;
+         width: 30.33%;
+         padding: 50px;
+         clear: none;
+         }
     
+
     </style>
 </head>
 <body>
 
-<h1>The not so very relaxed beginner!</h1>
+<h1>The M1_TEST!</h1>
+
+<div1 class="div1" style="background-color: blue"><p>This is Blue1</p></div1>
+<div1 class="div1" style="background-color: royalblue"><p>This is Blue2</p></div1>
+<div1 class="div1" style="background-color: skyblue"><p>This is Blue3</p></div1>
+
+<div2 class="div2" style="background-color: mediumspringgreen"><p>This is Green1</p></div2>
+<div2 class="div2" style="background-color: greenyellow"><p>This is Green2</p></div2>
+<div2 class="div2" style="background-color: palegreen"><p>This is Green3</p></div2>
+
+<div3 class="div3" style="background-color: purple"><p>This is Purple1</p></div3>
+<div3 class="div3" style="background-color: rebeccapurple"><p>This is Purple2</p></div3>
+<div3 class="div3" style="background-color: blueviolet"><p>This is Purple3</p></div3>
+
+
 
 <img src="/Images/ni_no_kuni_1.jpg" width="400" height="500" alt="Oups the image your looking for is missing">
 
 
 
 <p style="color: purple">
-    Fast text formating thing, or something. Fast text formating thing, or something.
-    Fast text formating thing, or something. Fast text formating thing, or something.<br>
-    Fast text formating thing, or something. Fast text formating thing, or something. 
-    Fast text formating thing, or something. Fast text formating thing, or something. 
 </p>
 <a href="https://www.youtube.com">If i want to direct myself to youtube.</a>
 
@@ -30,6 +67,7 @@
     
     </script>
 </body>
+
 
 
 </html>
