--- a/Start It M1 læring.HTML
+++ b/Start It M1 læring.HTML
@@ -5,30 +5,36 @@
     <style>
 
     .div1 {box-sizing: border-box;
-         margin: 1px;
-         border: black 2px;
+         border: 30px groove yellow;
+         margin: 18px;
          float: left;
-         width: 30.33%;
-         padding: 50px;
+         width: 23.33%;
+         height: 5.33%;
+         padding: 25px;
          clear: none;
+         text-align: center;
         }
 
     .div2 {box-sizing: border-box;
-         margin: 1px;
-         border: black 2px;
+         border: 30px groove orange;
+         margin: 18px;
          float: left;
-         width: 30.33%;
-         padding: 50px;
+         width: 23.33%;
+         height: 5.33%;
+         padding: 25px;
          clear: none;
+         text-align: center;
          }
 
     .div3 {box-sizing: border-box;
-         margin: 1px;
-         border: black 2px;
+         border: 30px groove teal;
+         margin: 18px;
          float: left;
-         width: 30.33%;
-         padding: 50px;
+         width: 23.33%;
+         height: 5.33%;
+         padding: 25px;
          clear: none;
+         text-align: center;
          }
     
 
@@ -36,30 +42,23 @@
 </head>
 <body>
 
-<h1>The M1_TEST!</h1>
+<h1 style="color:red">The M1_TEST!</h1>
 
-<div1 class="div1" style="background-color: blue"><p>This is Blue1</p></div1>
-<div1 class="div1" style="background-color: royalblue"><p>This is Blue2</p></div1>
-<div1 class="div1" style="background-color: skyblue"><p>This is Blue3</p></div1>
+<div1 class="div1" style="background-color: blue"><p style="color:black">This is Blue1</p></div1>
+<div1 class="div1" style="background-color: royalblue"><p style="color:black">This is Blue2</p></div1>
+<div1 class="div1" style="background-color: skyblue"><p style="color:black">This is Blue3</p style="color:darkgray"></div1>
 
-<div2 class="div2" style="background-color: mediumspringgreen"><p>This is Green1</p></div2>
-<div2 class="div2" style="background-color: greenyellow"><p>This is Green2</p></div2>
-<div2 class="div2" style="background-color: palegreen"><p>This is Green3</p></div2>
+<div2 class="div2" style="background-color: mediumspringgreen"><p style="color:gray">This is Green1</p style="color:darkgray"></div2>
+<div2 class="div2" style="background-color: greenyellow"><p style="color:gray">This is Green2</p style="color:darkgray"></div2>
+<div2 class="div2" style="background-color: palegreen"><p style="color:gray">This is Green3</p style="color:darkgray"></div2>
 
-<div3 class="div3" style="background-color: purple"><p>This is Purple1</p></div3>
-<div3 class="div3" style="background-color: rebeccapurple"><p>This is Purple2</p></div3>
-<div3 class="div3" style="background-color: blueviolet"><p>This is Purple3</p></div3>
+<div3 class="div3" style="background-color: purple"><p style="color:lightgray">This is Purple1</p style="color:darkgray"></div3>
+<div3 class="div3" style="background-color: rebeccapurple"><p style="color:lightgray">This is Purple2</p style="color:darkgray"></div3>
+<div3 class="div3" style="background-color: blueviolet"><p style="color:lightgray">This is Purple3</p style="color:darkgray"></div3>
 
 
 
 <img src="/Images/ni_no_kuni_1.jpg" width="400" height="500" alt="Oups the image your looking for is missing">
-
-
-
-<p style="color: purple">
-</p>
-<a href="https://www.youtube.com">If i want to direct myself to youtube.</a>
-
 
 
     <script>
