Updated oblig_1 (again)

--- a/Obligatorisk_oppgave_M1/Fredrik's_Oblig1.html
+++ b/Obligatorisk_oppgave_M1/Fredrik's_Oblig1.html
@@ -68,6 +68,11 @@ QUnit.test( "Checks if the date is a valid one. ", function(assert) {
    const actual = strVar('32.01.2020');
    assert.equal(actual, true);
   });
+
+  QUnit.test( "Checks if the date thats given is true. ", function(assert) {
+   const isDateValid = strVar('03.02.2020');
+   assert.equal(isDateValid, true);
+  });
     </script>
         </body>
 
