--- a/Oblig_2_prototype.html
+++ b/Oblig_2_prototype.html
@@ -18,7 +18,7 @@
         show();
         function show() {
             
-            let selectedOrNot = currentlySelectedBar == 'None selected' ? "disabled" : "";
+            let selectedOrNot = currentlySelectedBar == 'None selected' ? "disabled" : "enable";
             let svgInnerHtml = '';
             for (let i = 0; i < numbers.length; i++) {
                 svgInnerHtml += createBar(numbers[i], i + 1);
@@ -33,8 +33,7 @@
                 <input type="number" min="1" max="10" />
                 <button>Add selected bar</button>
                 <button ${selectedOrNot}>Change selected bar</button><br />
-                <button ${selectedOrNot}>Remove selected bar</button>
-                `;
+                <button ${selectedOrNot} onclick="removeBar()">Remove selected bar</button> `;
         }
     
         function createBar(number, barNo) {
@@ -59,7 +58,7 @@
             return colString;
         }
 
-        //Controller
+        //Controller is called within haed "Prototype.js"
     </script>
 
     </body>
