--- a/Oblig_2_prototype.html
+++ b/Oblig_2_prototype.html
@@ -30,10 +30,10 @@
                 Selected bar: <i>${currentlySelectedBar}</i>
                 <br />
                 Verdi:
-                <input type="number" min="1" max="10" />
-                <button>Add selected bar</button>
-                <button ${selectedOrNot}>Change selected bar</button><br />
-                <button ${selectedOrNot} onclick="removeBar()">Remove selected bar</button> `;
+                <input id="displayValue" type="number" min="1" max="10" />
+                <button onclick="addSelectedBar()">Add selected bar</button>
+                <button ${selectedOrNot} onclick="editSelectedBar()">Change selected bar</button><br />
+                <button ${selectedOrNot} onclick="removeSelectedBar()">Remove selected bar</button> `;
         }
     
         function createBar(number, barNo) {
